# cors-poc

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py
frontend/: Dockerfile
frontend/src/: App.js
