[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jack Mead <jack.mead@corndel.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
